@@ -54,12 +54,6 @@ int yywrap (void)
 {
   return 1;
 }
-
-/* Avoid possible link errors. */
-int yywrap (void)
-{
-  return 1;
-}
 END
 
 $ACLOCAL
