@@ -1,3 +1,9 @@
+2011-12-15  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failure in 'lex3.test'
+	* tests/lex3.test (foo.l): Remove duplicated definition of
+	`yywrap'.  Problem introduced in merge `v1.11-1579-g8d3466c'.
+
 2011-12-09  Jim Meyering  <meyering@redhat.com>
 	    Stefano Lattarini  <stefano.lattarini@gmail.com>
 
